--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -8,10 +8,10 @@ html(lang='en')
     meta(name='author', content='')
     title Grateful Dead Song Search | Doin' That Rag
 
-    link(href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css", rel="stylesheet", integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1", crossorigin="anonymous")
+    //link(href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css", rel="stylesheet", integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1", crossorigin="anonymous")
 
   body
     #app
 
-    script(src="/build/app.js")
+    script(src="build/app.js")
 
